infra/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: risklens-frontend
  namespace: risklens
  labels:
    app: risklens-frontend
  annotations:
    # GKE Ingress requires NodePort or ClusterIP backend
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  selector:
    app: risklens-frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
